src/index.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap");

*,
::before,
::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  height: 100vh;
  font-size: 10px;
}

@media screen and (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

body {
  font-family: "Montserrat", sans-serif;
  height: 100vh;
}

#root {
  height: 100%;
}

a {
  text-decoration: none;
}

li {
  list-style: none;
}

h1 {
  font-size: 3rem;
  font-weight: 600;
}

h2 {
  font-size: 2.25rem;
  font-weight: 400;
}

p {
  font-size: 1.25rem;
}

